Design: Solved teaxt alignment issues in payment thank ypu page

--- a/wp-content/themes/adrenalin/src/sass/custom.scss
+++ b/wp-content/themes/adrenalin/src/sass/custom.scss
@@ -886,6 +886,7 @@ body.single-product .product-title-wrapper {
 /* Checkout page */
 .woocommerce-checkout-payment,
 .checkout-confirmed-payment {
+  text-align: center;
   ul {
     li {
       border-right: none;
